--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "react-kabzda-2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abysslintu.github.io/demo1-social-network",
+  "homepage": "https://abysslintu.github.io/social-network",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
